# file-org

./: README.md  pyproject.toml
src/file_org/: __init__.py  categories.py  cli.py  organiser.py
tests/: test_organiser.py
