[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "file-org"
version = "0.1.0"
description = "Organise files in a directory by category"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alex Black" }]
requires-python = ">=3.10"

[project.scripts]
file-org = "file_org.cli:main"
